Fixed button mobile bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background-color: #CCD9F0;
+  background-color: black;
 }
 
 a {
